[package]
name = "ecs"
version = "0.1.0"
authors = ["nathanfaucett <nathanfaucett@gmail.com>"]

keywords = ["ecs", "entity", "component", "system"]
description = "entity component system"
license = "MIT"
readme = "README.md"
repository = "https://github.com/nathanfaucett/rs-ecs.git"
homepage = "https://github.com/nathanfaucett/rs-ecs"

[dependencies]
uuid = { version = "0.3", features = ["v4"] }
impl_any = {git = "https://github.com/nathanfaucett/rs-impl_any"}
thread_pool = {git = "https://github.com/nathanfaucett/rs-thread_pool"}

[dev-dependencies]
num_cpus = { version = "1.2" }
